--- a/experiences.html
+++ b/experiences.html
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header class="hover:animate-pulse flex flex-row items-center space-x-4  p-4 rounded-xl">
     <div>
-      <img class="p-1 w-16 md:w-32 lg:w-32 xl:w-48 2xl:w-64 rounded-full" src="/ressources/myface.jpg" alt="myface">
+      <img class="p-1 w-16 md:w-32 lg:w-32 xl:w-48 2xl:w-64 rounded-full" src="/DigitalResume/ressources/myface.jpg" alt="myface">
     </div>
     <div class="md:flex-1">
       <p class="text-xl font-semibold">Terence NDONGO</p>
