--- a/motivations.html
+++ b/motivations.html
@@ -25,7 +25,7 @@
       <ul class="flex flex-wrap gap-3 justify-center">
           <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="experiences.html">EXPERIENCES</a></li>
           <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="formations.html">FORMATIONS</a></li>
-          <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="motivations.html">MOTIVATIONS</a></li>
+          <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="index.html">INDEX</a></li>
       </ul>
   </nav>
   
