--- a/formations.html
+++ b/formations.html
@@ -22,7 +22,7 @@
       <nav class="mt-6">
         <ul class="flex flex-wrap gap-3 justify-center">
             <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="experiences.html">EXPERIENCES</a></li>
-            <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="index.html">INDEX</a></li>
+            <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="index.html">A PROPOS</a></li>
             <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="motivations.html">MOTIVATIONS</a></li>
         </ul>
     </nav>
