--- a/experiences.html
+++ b/experiences.html
@@ -24,7 +24,7 @@
 <!-- Navigation -->
 <nav class="mt-6">
   <ul class="flex flex-wrap gap-3 justify-center">
-      <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="index.html">INDEX</a></li>
+      <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="index.html">A PROPOS</a></li>
       <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="formations.html">FORMATIONS</a></li>
       <li class="nav hover:animate-pulse  px-4 py-2 rounded-full shadow hover:bg-gray-400 transition"><a href="motivations.html">MOTIVATIONS</a></li>
   </ul>
